--- a/media/css/custom.css
+++ b/media/css/custom.css
@@ -5784,8 +5784,7 @@ form:after {
 }
 
 .login_content {
-    margin: 0 auto;
-    padding: 25px 0 0;
+    margin: 0 auto;    
     position: relative;
     text-align: center;
     text-shadow: 0 1px 0 #fff;
@@ -6289,6 +6288,24 @@ body {
     padding-left: 5px;
     padding-right: 5px;
   }
+}
+
+.sun-flower-button {
+  position: relative;
+  vertical-align: top;
+  width: 100%;
+  height: 60px;
+  padding: 0;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #2ECC71;
+  border: 0;
+  border-bottom: 2px solid #019875;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #019875;
+  box-shadow: inset 0 -2px #019875;
 }
 
 .docs-options .dropdown-menu {
