--- a/media/css/custom.css
+++ b/media/css/custom.css
@@ -1093,6 +1093,15 @@ h2 {
     white-space: nowrap;
 }
 
+.x_title h3 {
+    margin: 5px 0 6px;
+    float: left;
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .x_title h2 small {
     margin-left: 10px;
 }
@@ -1537,26 +1546,6 @@ table.display td {
 
 table.display td.center {
     text-align: center;
-}
-
-.sorting_asc {
-    background: url('../images/sort_asc.png') no-repeat center right;
-}
-
-.sorting_desc {
-    background: url('../images/sort_desc.png') no-repeat center right;
-}
-
-.sorting {
-    background: url('../images/sort_both.png') no-repeat center right;
-}
-
-.sorting_asc_disabled {
-    background: url('../images/sort_asc_disabled.png') no-repeat center right;
-}
-
-.sorting_desc_disabled {
-    background: url('../images/sort_desc_disabled.png') no-repeat center right;
 }
 
 table.display thead th:active,
@@ -2057,7 +2046,8 @@ ul.top_profiles li:nth-child(odd) {
 
 .media .date {
     background: #ccc;
-    width: 52px;
+    min-width: 80px;
+    min-height: 60px;
     margin-right: 10px;
     border-radius: 10px;
     padding: 5px;
