--- a/media/css/login.css
+++ b/media/css/login.css
@@ -1,4 +1,4 @@
-/*STYLE LOGIN FLAT*/
+STYLE LOGIN FLAT*/
 
 /*ATAS*/
 .headerr {
@@ -36,6 +36,7 @@
 	margin-top: 10px;
 }
 
+/*notifikasi gagal login*/
 .warning {
 	height: 35px;
 	padding: 1px;
@@ -108,4 +109,4 @@
 }
 
 
-/*end fonts*/
+/*end fonts
