--- a/media/css/login.css
+++ b/media/css/login.css
@@ -1,4 +1,4 @@
-STYLE LOGIN FLAT*/
+/*STYLE LOGIN FLAT*/
 
 /*ATAS*/
 .headerr {
@@ -36,7 +36,6 @@ STYLE LOGIN FLAT*/
 	margin-top: 10px;
 }
 
-/*notifikasi gagal login*/
 .warning {
 	height: 35px;
 	padding: 1px;
@@ -109,4 +108,4 @@ STYLE LOGIN FLAT*/
 }
 
 
-/*end fonts
+/*end fonts*/
